--- a/index.css
+++ b/index.css
@@ -1,3 +1,13 @@
 body{
     background-color: bisque;
 }
+header{
+    background-color: aquamarine;
+    #logo{
+        background-color: red;
+        font-familly: arial black;
+        font-size:12px;
+        
+
+    }
+}
